make api example request only & add jsonschema api
