# src/open_producten/producten/views.py
@@ -14,7 +14,7 @@ from open_producten.utils.views import OrderedModelViewSet
     ),
     retrieve=extend_schema(
         summary="Een specifiek PRODUCT opvragen.",
-        description="Een specifieke PRODUCT opvragen.",
+        description="Een specifiek PRODUCT opvragen.",
     ),
     create=extend_schema(
         summary="Maak een PRODUCT aan.",
@@ -29,6 +29,7 @@ from open_producten.utils.views import OrderedModelViewSet
                     "gepubliceerd": False,
                     "bsn": "111222333",
                     "status": "gereed",
+                    "verbruiksobject": {"uren": 130},
                 },
                 request_only=True,
             )
