# src/producten-openapi.yaml
@@ -107,6 +107,8 @@ paths:
                   gepubliceerd: false
                   bsn: '111222333'
                   status: gereed
+                  verbruiksobject:
+                    uren: 130
                 summary: Create product
         required: true
       security:
@@ -143,7 +145,7 @@ paths:
   /producten/{id}/:
     get:
       operationId: producten_retrieve
-      description: Een specifieke PRODUCT opvragen.
+      description: Een specifiek PRODUCT opvragen.
       summary: Een specifiek PRODUCT opvragen.
       parameters:
       - in: path
@@ -544,6 +546,10 @@ components:
           pattern: ^[0-9]*$
           maxLength: 8
           minLength: 8
+        verbruiksobject:
+          nullable: true
+          description: Verbruiksobject van dit product. Wordt gevalideerd met het
+            `verbruiksobject_schema` uit het product type.
     Product:
       type: object
       properties:
@@ -609,6 +615,10 @@ components:
           pattern: ^[0-9]*$
           maxLength: 8
           minLength: 8
+        verbruiksobject:
+          nullable: true
+          description: Verbruiksobject van dit product. Wordt gevalideerd met het
+            `verbruiksobject_schema` uit het product type.
       required:
       - aanmaak_datum
       - id
@@ -665,6 +675,10 @@ components:
           pattern: ^[0-9]*$
           maxLength: 8
           minLength: 8
+        verbruiksobject:
+          nullable: true
+          description: Verbruiksobject van dit product. Wordt gevalideerd met het
+            `verbruiksobject_schema` uit het product type.
       required:
       - product_type_id
     StatusEnum:
